--- a/templates/tournaments/creator/main_creator.html
+++ b/templates/tournaments/creator/main_creator.html
@@ -174,14 +174,14 @@
 				              <div class="carousel-caption">
 				                <h3 class="colored-text">{% trans "Manual Validation" %}</h3>
 				                <p>{% trans "In the Manual Validation section you can validate manually the Scratch projects uploaded by the participants." %}</p>
-				                <p><a href="#" class="btn btn-primary standard-button" role="button">{% trans "Access" %}</a></p>
+				                <p><a href="/creator/validation" class="btn btn-primary standard-button" role="button">{% trans "Access" %}</a></p>
 				              </div>
 				          </div>
 				          <div class="item">
 				          	  <img class="first-slide" src="../../static/app/images/tournaments/undraw_visual_data_b1wx.png" alt="First slide">
 				              <div class="carousel-caption text-right">
 				                <h3 style="color: #fc3b3b;">{% trans "Tournaments progress" %}</h3>
-				                <p>{% trans "The Tournaments progress section provides information about tournaments created." %}</p>
+				                <p>{% trans "The Tournaments progress section provides information about the state of the games played in created tournaments." %}</p>
 				                <p><a href="/creator/tournaments" class="btn btn-primary standard-button" role="button">{% trans "Access" %}</a></p>
 				              </div>
 				          </div>
