--- a/templates/tournaments/creator/admin/teams/teamsList.html
+++ b/templates/tournaments/creator/admin/teams/teamsList.html
@@ -239,8 +239,8 @@
 						            <div class="colored-line"></div> 
 						          </div>
 					    		  <div class="modal-body">
-					    		  	{% if t.participant.all|length > 0 %}
-						    		  	{% for p in t.participant.all %}
+					    		  	{% if t.participant_set.all|length > 0 %}
+						    		  	{% for p in t.participant_set.all %}
 						    		  	<ul class="feature-list list-text-container">
 						    		  		<li><i class="glyphicon glyphicon-user colored-text"></i><span class="space-left">{{p.username}}</span></li>
 						    		  	</ul>
