--- a/templates/tournaments/creator/progress/tournamentsProgress.html
+++ b/templates/tournaments/creator/progress/tournamentsProgress.html
@@ -157,33 +157,34 @@
 	            </div>
         		<!-- MAIN CONTENT -->
 		       	<div class="row">
+		       	  {% if messages %}
+		          		{% for message in messages %}
+		          			{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+		          				<div class="alert alert-danger" role="alert">
+								  <strong>{% trans "Error!" %}</strong> {{ message }}
+								</div>
+							{% endif %}
+							{% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+								<div class="alert alert-warning" role="alert">
+								  <strong>{% trans "Warning!" %}</strong> {{ message }}
+								</div>
+							{% endif %}
+							{% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+								<div class="alert alert-info" role="alert">
+								  <strong>{% trans "Info:" %}</strong> {{ message }}
+								</div>
+							{% endif %}
+							{% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+								<div class="alert alert-success" role="alert">
+								  <strong>{% trans "Success!" %}</strong> {{ message }}
+								</div>
+							{% endif %}
+						{% endfor %}
+		          	{% endif %}
+		          {% if tournamentsPagina|length > 0 %}
 		       	  <div class="col-md-2"></div>
 		       	  <div class="col-md-8">
 			          <div class="list-border">
-			          	{% if messages %}
-			          		{% for message in messages %}
-			          			{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-			          				<div class="alert alert-danger" role="alert">
-									  <strong>{% trans "Error!" %}</strong> {{ message }}
-									</div>
-								{% endif %}
-								{% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
-									<div class="alert alert-warning" role="alert">
-									  <strong>{% trans "Warning!" %}</strong> {{ message }}
-									</div>
-								{% endif %}
-								{% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
-									<div class="alert alert-info" role="alert">
-									  <strong>{% trans "Info:" %}</strong> {{ message }}
-									</div>
-								{% endif %}
-								{% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-									<div class="alert alert-success" role="alert">
-									  <strong>{% trans "Success!" %}</strong> {{ message }}
-									</div>
-								{% endif %}
-							{% endfor %}
-			          	{% endif %}
 						<h3 class="list-title">{% trans "Tournaments created by" %} {{ user }}</h3>
 						{% for t in tournamentsPagina %}
 							<div class="list-container">
@@ -194,7 +195,7 @@
 							  {% else %}	
 							  	<img data-src="holder.js/32x32?theme=thumb&amp;bg=007bff&amp;fg=007bff&amp;size=1" alt="32x32" class="list-img" style="width: 32px; height: 32px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2232%22%20height%3D%2232%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_167f929ecf1%20text%20%7B%20fill%3A%23007bff%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A2pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_167f929ecf1%22%3E%3Crect%20width%3D%2232%22%20height%3D%2232%22%20fill%3D%22%23007bff%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2211.84375%22%20y%3D%2216.95625%22%3E32x32%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
 							  {% endif %}
-							  <p class="list-text">
+							  <p class="list-text space-bottom">
 								<strong class="list-text-strong">{{t.name}}</strong>
 								{{t.description}}</br></br>
 								<a data-toggle="modal" class="colored-text" href="#modalDetailTournament_{{t.id}}">{% trans "Detail " %} <i class="glyphicon glyphicon-search"></i></a>
@@ -249,7 +250,7 @@
 						    		  			<ul class="feature-list list-text-container">
 								    		  		<li><i class="glyphicon glyphicon-star colored-text"></i>
 								    		  		<a class="desplegable2" data-toggle="popover" data-html="true"
-								    		  			data-content="{% for p in team.participant.all %}
+								    		  			data-content="{% for p in team.participant_set.all %}
 								    		  			{{forloop.counter}}: {{p.username}}<br/>
 								    		  			{% endfor %}"
 								    		  			data-trigger="hover"><span class="space-left">{{team.name}}</span></li>
@@ -292,7 +293,10 @@
 					 </div>
 				</div>
 				<div class="col-md-2"></div>
-              </div>
+				{% else %}
+			     	<h2 class="intro white-text title-space-bottom">{{username}} {% trans "didn´t include any tournament yet" %}</h2>
+				{% endif %}
+              </div><!-- Row -->
             </div>
          </div>
         <!-- =========================
