--- a/templates/tournaments/creator/validation/validation.html
+++ b/templates/tournaments/creator/validation/validation.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load getdict_template %}
 <html>
 	<head>
 	    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -6,7 +7,10 @@
 	    <meta name="keywords" content="Stamp, Startup, Multipurpose, Bootstrap, Landing page, Template, Registration, Landing">
 	    <meta name="author" content="Programamos URJC Libresoft FECyT">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
 	    <link rel="stylesheet" href="../../static/app/content/bootstrap-tour.css">
+	    <script src="../../static/app/scripts/bootstrap.min.js"></script>
+	    <script src="../../static/app/scripts/bootstrap-tour.js"></script>
 	    <!-- SITE TITLE -->
 	    <title>Dr. Scratch</title>
 	    <link rel="stylesheet" href="../../static/app/content/style.css">
@@ -29,7 +33,7 @@
 	    <link rel="stylesheet" href="../../static/app/content/nivo-lightbox.css">
 	    <link rel="stylesheet" href="../../static/app/content/default.css">
 	    <!-- CUSTOM STYLESHEETS -->
-	    <link rel="stylesheet" href="../../static/app/content/styles_organizations.css">
+	    <link rel="stylesheet" href="../../static/app/content/tournaments/styles_creator.css">
 	    <!-- RESPONSIVE FIXES -->
 	    <link rel="stylesheet" href="../../static/app/content/responsive.css">
 	    <!-- DEFAULT COLOR/ CURRENTLY USING -->
@@ -117,7 +121,8 @@
 	                                                </div>                                                
 	                                                <div class="centre">
 	                                                    {% trans "<input type='submit' value='Sign in' id='sign-in' class='btn-group btn-group-justified colored-text'>" %}
-	                                                </div>                                            
+	                                                </div>    
+	                                                {% csrf_token %}                                        
 	                                            </form>
 	                                        </div>            
 	                                        </li>
@@ -136,52 +141,96 @@
     ============================== -->
             <!-- CONTAINER -->
             <div class="container">
-
-        <!-- ONLY LOGO ON HEADER -->
-                <div class="row">
-                    <div class="col-md-12">
-                        <!-- HEADING AND BUTTONS -->
-                         <div class="intro-section">
-							{% if messages %}
-				          		{% for message in messages %}
-				          			{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-				          				<div class="alert alert-danger" role="alert">
-										  <strong>{% trans "Error!" %}</strong> {{ message }}
-										</div>
-									{% endif %}
-									{% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
-										<div class="alert alert-warning" role="alert">
-										  <strong>{% trans "Warning!" %}</strong> {{ message }}
-										</div>
-									{% endif %}
-									{% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
-										<div class="alert alert-info" role="alert">
-										  <strong>{% trans "Info:" %}</strong> {{ message }}
-										</div>
-									{% endif %}
-									{% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-										<div class="alert alert-success" role="alert">
-										  <strong>{% trans "Success!" %}</strong> {{ message }}
-										</div>
-									{% endif %}
-								{% endfor %}
-				          	{% endif %}
-                            <!-- WELCOM MESSAGE -->
-                            <h1 class="intro white-text">{% trans "Welcome to Dr. Scratch Tournaments" %}</h1>
-                            
-                            <h4 align=justify class="transparent-text"><strong>{% trans "Dr. Scratch tournaments allows registered teachers create and manage tournaments for students to take part in them. Tournaments can be evaluated manually or automatically." %} </strong></h4>
-                         	<div class="intro-section">
-	                            <!-- BUTTON -->
-	                            <div class="button hidden-xs">
-	                                <a href="#section1" class="btn btn-primary secondary-button">{% trans "Sign up!" %}</a>
-	                            </div>
-	                            <!-- /END BUTTON -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            	<!-- BACK BUTTON -->
+            	<div class="row">
+		          <div class="col-md-4">
+	            	<ul class="nav navbar-nav navbar-left login-register back-button small-text">                
+	                    <li style="display: block;" class="register-button js-register inpage-scroll">
+	                        <a href="/tournaments" class="navbar-register-button">{% trans "« Back" %}</a>
+	                    </li>
+	                </ul>
+	               </div>
+	            </div>
+        		<!-- MAIN CONTENT -->
+		       	<div class="row">
+		       	  <div class="col-md-2"></div>
+		       	  <div class="col-md-8">
+			          <div class="list-border space-bottom">
+			          	{% if messages %}
+			          		{% for message in messages %}
+			          			{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+			          				<div class="alert alert-danger" role="alert">
+									  <strong>{% trans "Error!" %}</strong> {{ message }}
+									</div>
+								{% endif %}
+								{% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+									<div class="alert alert-warning" role="alert">
+									  <strong>{% trans "Warning!" %}</strong> {{ message }}
+									</div>
+								{% endif %}
+								{% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+									<div class="alert alert-info" role="alert">
+									  <strong>{% trans "Info:" %}</strong> {{ message }}
+									</div>
+								{% endif %}
+								{% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+									<div class="alert alert-success" role="alert">
+									  <strong>{% trans "Success!" %}</strong> {{ message }}
+									</div>
+								{% endif %}
+							{% endfor %}
+			          	{% endif %}
+			          	{% if tournamentsPagina|length > 0 %}
+						<h3 class="list-title">{% trans "Tournaments created by" %} {{ user }}</h3>
+						{% for t in tournamentsPagina %}
+							<div class="list-container">
+							  {% if forloop.counter0|divisibleby:3 %}
+							  	<img data-src="holder.js/32x32?theme=thumb&amp;bg=6f42c1&amp;fg=6f42c1&amp;size=1" alt="32x32" class="list-img" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2232%22%20height%3D%2232%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_167f929ecf7%20text%20%7B%20fill%3A%236f42c1%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A2pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_167f929ecf7%22%3E%3Crect%20width%3D%2232%22%20height%3D%2232%22%20fill%3D%22%236f42c1%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2211.84375%22%20y%3D%2216.95625%22%3E32x32%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="width: 32px; height: 32px;">
+							  {% elif forloop.counter0|divisibleby:2 %}	
+							  	<img data-src="holder.js/32x32?theme=thumb&amp;bg=e83e8c&amp;fg=e83e8c&amp;size=1" alt="32x32" class="list-img" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2232%22%20height%3D%2232%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_167f929ecf5%20text%20%7B%20fill%3A%23e83e8c%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A2pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_167f929ecf5%22%3E%3Crect%20width%3D%2232%22%20height%3D%2232%22%20fill%3D%22%23e83e8c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2211.84375%22%20y%3D%2216.95625%22%3E32x32%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="width: 32px; height: 32px;">
+							  {% else %}	
+							  	<img data-src="holder.js/32x32?theme=thumb&amp;bg=007bff&amp;fg=007bff&amp;size=1" alt="32x32" class="list-img" style="width: 32px; height: 32px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2232%22%20height%3D%2232%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_167f929ecf1%20text%20%7B%20fill%3A%23007bff%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A2pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_167f929ecf1%22%3E%3Crect%20width%3D%2232%22%20height%3D%2232%22%20fill%3D%22%23007bff%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2211.84375%22%20y%3D%2216.95625%22%3E32x32%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+							  {% endif %}
+							  <p class="list-text">
+								<strong class="list-text-strong">{{t.name}}</strong>
+								{{t.description}}</br></br>
+								<a data-toggle="modal" class="space-right colored-text" href="/creator/validate/tournament?tournament={{t.id}}&page={{tournamentsPagina.number}}">{% trans "Validate Games" %} <i class="glyphicon glyphicon-edit"></i></a>
+							  </p>
+							</div>
+						{% endfor %}
+					<!-- PAGINATOR -->
+	            	<nav aria-label="">
+					  {% if tournamentsPagina.has_other_pages %}
+						  <ul class="pagination">
+						    {% if tournamentsPagina.has_previous %}
+						      <li><a href="?page={{ tournamentsPagina.previous_page_number }}">&laquo;</a></li>
+						    {% else %}
+						      <li class="disabled"><span>&laquo;</span></li>
+						    {% endif %}
+						    {% for i in tournamentsPagina.paginator.page_range %}
+						      {% if tournamentsPagina.number == i %}
+						        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+						      {% else %}
+						        <li><a href="?page={{ i }}">{{ i }}</a></li>
+						      {% endif %}
+						    {% endfor %}
+						    {% if tournamentsPagina.has_next %}
+						      <li><a href="?page={{ tournamentsPagina.next_page_number }}">&raquo;</a></li>
+						    {% else %}
+						      <li class="disabled"><span>&raquo;</span></li>
+						    {% endif %}
+						  </ul>
+						{% endif %}
+					</nav>
+					{% else %}
+					     <h2 class="intro white-text title-space-bottom">{% trans "There are no tournaments with games left to validate." %}</h2>
+					{% endif %}
+					 </div>
+				</div>
+				<div class="col-md-2"></div>
+              </div>
             </div>
-        </div>
+         </div>
         <!-- =========================
 	     SECTION: CLIENTS LOGOs
 	    ============================== -->
@@ -214,112 +263,6 @@
 	    </div>
 	    </section>
     </header>
-    <!-- =========================
-     SECTION: Form
-    ============================== -->
-    <section id="section1" class="services grey-bg">
-        <div class="container">
-            <!-- SECTION HEADER -->
-            <div class="section-header">
-
-                <div class="small-text-medium uppercase colored-text">
-                    {% trans "Dr. Scratch Tournaments" %}
-                </div>
-                <h2 class="dark-text"><strong>{% trans "How " %} </strong>{% trans "to join Dr. Scratch tournaments?" %}</h2>
-                <div class="colored-line"></div>
-                <div class="sub-heading">
-                    <h3><em>{% trans "Would you like to be one of the 10 first teachers testing this new feature? Just drop us a line at " %}<a href="mailto:team@drscratch.org" class="strong">team@drscratch.org</a>{% trans  " and we'll send you a hash key that will allow you to sign up in the web" %}</em></h3>
-
-
-        </div>
-        </div>
-    </section>
-
-    <!-- FORM -->
-        
-        <div class="container">
-        <img src="../../static/app/images/drScratch.png" alt=""  width="200" height="200" />
-        <form action="/creator/signup" method="post" class="vertical-registration-form" role="form">
-       {% csrf_token %}     
-       <div class="col-lg-8">
-        <label class="col-md-6 text-left control-label">{% trans "Teacher's username" %}</label>
-          <input class='form-control' name='username' placeholder='Username'>
-        </div>
-        {{ form.as_p }}
-    
-        <div class="col-lg-8">
-        <label for="ejemplo_email_3" class="col-md-6 text-left control-label">E-mail</label>
-        
-          <input type="email" class="form-control" name="email"
-                 placeholder="E-mail">
-      </div>
-
-        {{ form.as_p }}
-
-      <div class="form-group">
-        <div class="col-lg-8">
-        <label class="col-lg-2 control-label">{% trans "Password" %}</label>
-        
-        {% trans "<input type='password' class='form-control' name='password' placeholder='Password'>" %}
-      </div>
-
-        {{ form.as_p }}
-
-     <div class="form-group">
-        <div class="col-lg-8">
-        <label class="col-lg-2 control-label">{% trans "Hashkey" %}</label>
-        
-        {% trans "<input type='password' class='form-control' name='hashkey' placeholder='Password'>" %}
-      </div>
-
-        {{ form.as_p }}
-    </div>
-
-        
-            <div class="registration-buttom">      
-            <button style="visibility: visible; animation-duration: 2s; animation-name: fadeInRight;" class="btn btn-primary standard-button inpage-scroll wow fadeInRight animated" data-wow-duration="2s" data-wow-offset="10" type="submit">{% trans "Sign up!" %}</button>
-    
-            </div>
-    </form>
-    </div>
-    </div>
-        <!-- ENDFORM -->
-
-
-
-
-        <!-- =========================
-     SECTION: CONTACT INFO  
-    ============================== -->
-    <div class="contact-info white-bg">
-        <div class="container">
-
-            <!-- CONTACT INFO -->
-            <div class="row contact-links">
-
-                <div class="col-sm-4">
-                    <div class="icon-container">
-                        <span class="icon-basic-mail colored-text"></span>
-                    </div>
-                    <a href="mailto:drscratch@programamos.es" class="strong">team@drscratch.org</a>
-                </div>
-
-                <div class="col-sm-4">
-                    <div class="icon-container">
-                        <span class="icon-social-twitter colored-text"></span>
-                    </div>
-                    <a href="https:/twitter.com/drscratchtool" class="strong">@DrScratchTool</a>
-                </div>
-
-                <div class="col-sm-4">
-                    <div class="icon-container">
-                        <span class="icon-basic-tablet colored-text"></span>
-                    </div>
-                    <a href="https:/github.com/jemole/drScratch/issues" class="strong">GitHub(issues)</a>
-                </div>
-            </div>
-        </div>
-    </div>
 		<footer class="footer grey-bg">
 		    <div class="container">
 		           {% trans "©2014 Dr. Scratch is powered by " %}<a href="https:/github.com/ucsb-cs-education/hairball" class="dark-text">Hairball</a>
@@ -334,32 +277,5 @@
 		            </ul>
 		    </div>
 		</footer>
-		<!-- =========================
-     SCRIPTS   
-    ============================== -->
-    <script src="../../static/app/scripts/jquery.min.js"></script>
-    <script>
-        /* PRE LOADER */
-        jQuery(window).load(function () {
-            "use strict";
-            jQuery(".status").fadeOut();
-            jQuery(".preloader").delay(1000).fadeOut("slow");
-        })
-    </script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-    <script type="text/javascript" src="../../static/app/scripts/bootstrap-filestyle.js"> </script>
-    <script src="../../static/app/scripts/smoothscroll.js"></script>
-    <script src="../../static/app/scripts/bootstrap.min.js"></script>
-    <script src="../../static/app/scripts/bootstrap-tour.js"></script>
-    <script src="../../static/app/scripts/jquery.nav.js"></script>
-    <script src="../../static/app/scripts/ie-emulation-modes-warning.js"></script>
-    <script src="../../static/app/scripts/wow.js"></script>
-    <script src="../../static/app/scripts/nivo-lightbox.js"></script>
-    <script src="../../static/app/scripts/owl.js"></script>
-    <script src="../../static/app/scripts/jquery_main.js"></script>
-    <script src="../../static/app/scripts/jquery.ajaxchimp.min.js"></script>
-    <script src="../../static/app/scripts/progress-bar.js"></script>
-    <!-- CUSTOM JS  -->
-    <script src="../../static/app/scripts/custom.js"></script>
 	</body>
 </html>
