Correcciones tras revisión final

--- a/templates/tournaments/creator/admin/teams/newEditTeam.html
+++ b/templates/tournaments/creator/admin/teams/newEditTeam.html
@@ -197,7 +197,7 @@
 						          	<select class ="form-control input-box placeholder" id="p_id_{{forloop.counter0}}" name="p_id_{{forloop.counter0}}">
 						          		<option value="">{% trans "Select participant" %} {{forloop.counter}}</option>
 							          	{% for p in participants %}
-											<option value="{{ p.id }}"{% if t_p.email == p.email %}selected="selected"{% endif %}>{{ p.username }} ({{p.email}})</option>
+											<option value="{{ p.id }}"{% if t_p.email == p.email %}selected="selected"{% endif %}>{{ p.username }}</option>
 										{% endfor %}
 									</select>
 								{% endfor %}
@@ -205,7 +205,7 @@
 									<select class ="form-control input-box placeholder" id="p_id_{{n}}" name="p_id_{{n}}">
 						          		<option value="">{% trans "Select participant" %} {{n|add:1}}</option>
 							          	{% for p in participants %}
-											<option value="{{ p.id }}">{{ p.username }} ({{p.email}})</option>
+											<option value="{{ p.id }}">{{ p.username }}</option>
 										{% endfor %}
 									</select>
 								{% endfor %}
@@ -229,7 +229,7 @@
 						          	<select class ="form-control input-box placeholder" id="p_id_{{n}}" name="p_id_{{n}}">
 						          		<option value="">{% trans "Select participant" %} {{forloop.counter}}</option>
 							          	{% for p in participants %}
-											<option value="{{ p.id }}">{{ p.username }} ({{p.email}})</option>
+											<option value="{{ p.id }}">{{ p.username }}</option>
 										{% endfor %}
 									</select>
 								{% endfor %}
