--- a/static/app/icons/icons.css
+++ b/static/app/icons/icons.css
@@ -2,8 +2,8 @@
 
 @font-face {
   font-family: "stamp-icons";
-  src: url("fonts/stamp-icons.woff") format("woff"),
-    url("fonts/stamp-icons.ttf") format("truetype");
+  src: url("../fonts/stamp-icons.woff") format("woff"),
+    url("../fonts/stamp-icons.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 
