--- a/templates/tournaments/password/email.html
+++ b/templates/tournaments/password/email.html
@@ -5,7 +5,7 @@
 
 {% trans "You're receiving this email because you requested a password reset for your user account at Dr. Scratch."%}
 {% trans "Please, go to the following page and choose a new password:"%}
-drscratch.programamos.es{% url 'reset_password_tournaments' uidb64=uid token=token %}
+http://torneosdrscratch01.azurewebsites.net{% url 'reset_password_tournaments' uidb64=uid token=token %}
 {% trans "Your username is: " %}{{id}}
 {% block reset_link %}
 {% endblock %}
